Implement logic and basic styling.
Created 2 module objects for gameBoard and displayController.
Created 1 factory object for players
Added logic for wins/ties and simple styling

 Changes to be committed:
	modified:   index.html
	modified:   scripts.js
	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -5,21 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <div id="board">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="header"><h1>Tic Tac Toe</h1></div>
+    <div class="container">
+        <div class="grid-box grid-box0">
+            <button type="submit" class="game-board-button">Select</button> 
+        </div>
+        <div class="grid-box grid-box1">
+            <button type="submit" class="game-board-button">Select</button>
+        </div>
+        <div class="grid-box grid-box2">
+            <button type="submit" class="game-board-button">Select</button>
+        </div>
+        <div class="grid-box grid-box3">
+            <button type="submit" class="game-board-button">Select</button>
+        </div>
+        <div class="grid-box grid-box4">
+            <button type="submit" class="game-board-button">Select</button>
+        </div>
+        <div class="grid-box grid-box5">
+            <button type="submit" class="game-board-button">Select</button>
+        </div>
+        <div class="grid-box grid-box6">
+            <button type="submit" class="game-board-button">Select</button>
+        </div>
+        <div class="grid-box grid-box7">
+            <button type="submit" class="game-board-button">Select</button>
+        </div>
+        <div class="grid-box grid-box8">
+            <button type="submit" class="game-board-button">Select</button>
+        </div>
     </div>
+
+    <button type="submit" class="start-game-button">Add Players/Start Game</button>
+    <button type="submit" class="reset-button">Reset Game</button>
     
 </body>
 </html>
